--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,13 @@
                 <option value="done">Completed</option>
 
             </select>
+            <hr>
 
 
         </div>
     </div>
 
-    <hr>
+    
 
 
     <!-- The feed -->
@@ -98,6 +99,9 @@
             </form>
 
         </div>
+    </div>
+    <div class="row white">
+        <a href="https://github.com/Ariezz666/todolist" target="_blank">GitHub</a>
     </div>
 
 
