fixed a bug in the word task

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
             {% if all_finished_job%}
                 <div id="all-finished">
                 <hr>
-                    <h3 id="h-all-finished">You has been finished  {{ all_finished_job }} tasksr.net already</h3>
+                    <h3 id="h-all-finished">You has been finished  {{ all_finished_job }} tasks already</h3>
                 <hr>
                 </div>
             {% endif %}
