--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,11 @@
             <h2>To-do list</h2>
             {% if all_finished_job%}
                 <div id="all-finished">
-                    <hr>
+
                     <h3 id="h-all-finished">You has been finished  {{ all_finished_job }} tasks already</h3>
-                    <hr>
+
                 </div>
+
             {% endif %}
 
 
@@ -50,9 +51,9 @@
 
                                     </form>
                                     <div class="this_block_is_hidden">
-                                        <a  id="delete-job-{{job.id}}" class="delete">delete</a>
-                                        <a id="edit-job-{{job.id}}" class="edit">edit</a>
-                                        <a id="done-job-{{job.id}}" class="finished">change</a>
+                                        <input type="button" id="delete-job-{{job.id}}" class="delete" value="Delete">&nbsp;&nbsp;
+                                        <input type="button" id="edit-job-{{job.id}}" class="edit" value="Edit">&nbsp;&nbsp;
+                                        <input type="button" id="done-job-{{job.id}}" class="finished" value="Cancel">
                                     </div>
                                     <hr>
                                 </li>
@@ -70,9 +71,9 @@
 
                                     </form>
                                     <div class="this_block_is_hidden">
-                                        <a  id="delete-job-{{job.id}}" class="delete">delete</a>
-                                        <a id="edit-job-{{job.id}}" class="edit">edit</a>
-                                        <a id="done-job-{{job.id}}" class="finished">change</a>
+                                        <input type="button" id="delete-job-{{job.id}}" class="delete" value="Delete">&nbsp;&nbsp;
+                                        <input type="button" id="edit-job-{{job.id}}" class="edit" value="Edit">&nbsp;&nbsp;
+                                        <input type="button" id="done-job-{{job.id}}" class="finished" value="Complete">
                                     </div>
                                     <hr>
                                 </li>
@@ -87,8 +88,13 @@
 
         {% if done %}
             <div id="job-delete-complete">
-                <a  id="all_completed" class="delete-completed" >Delete completed : {{done}}</a>
+                <input type="button"  id="all_completed" class="delete-completed" value="Delete completed : {{done}}">
             </div>
+            {% else %}
+             <div id="job-delete-complete">
+
+            </div>
+
         {% endif %}
         <hr>
 
